# faster_mces

./: .gitignore  README.md  pixi.toml  pyproject.toml
benchmarks/: benchmark_bounds.py  benchmark_cuopt.py
experiments/: split_SMRT.ipynb
src/: import_test.py  setup_2.py
src/mces/: bounds.py  mces.py  nist_clusters_analysis.ipynb
src/mces/fast_mol_filter/: setup_backup.py
src/mces/fast_mol_filter/fast_mol_filter/: calculator.cpp  calculator.pyx  cpp_filter.cpp  cpp_filter.hpp  hungarian.cc
src/mces_from_packages/: CMakeLists.txt
src/mces_from_packages/src/fast_mol_filter/: cpp_filter.cpp  cpp_filter.hpp
src/mces_splitting/: __init__.py  bounds.py  bounds_test.py  cli.py  dataset_splitting.py  dsstox_smiles_medium.csv  graph_construction.py  lib.py  mces.py  par.py  test.py
tests/: bounds_test.py  comparison_to_rdkit.ipynb  splitting_test.py  test_mces_upper_bound_vs_exact.py
