[project]
name = "mces_splitting"
version = "0.4.0"

requires-python = ">=3.12"
dependencies = [
    "rdkit>=2024.0.0",
    "polars>=1.32.0,<2",
    "numpy>=2.0.0,<2.3.0",
    "scipy",
    "networkx",
    "pulp",
    "umap-learn",
    "hdbscan"
]


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

